# GraphicsTest

./: BATCHING_EXPLAINED.md  BUGFIXES.md  CMakeLists.txt  CULLING_FIXES.md  MATERIAL_SYSTEM.md  MINIMAP_CULLING_FIX.md  OPTIMIZATION_SYSTEM.md  PROJECT_DOCUMENTATION.md  README.md  REFACTORING.md  TECH_DOC.md  TESTING_BATCHING.md  TEXTURE_SYSTEM.md  main.cpp
shaders/: basic.frag  basic.vert  cube_shadow_depth.frag  cube_shadow_depth.geom  cube_shadow_depth.vert
src/: Application.cpp  Application.h  BatchRenderer.cpp  BatchRenderer.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeShadowMap.cpp  CubeShadowMap.h  Frustum.cpp  Frustum.h  InputManager.cpp  InputManager.h  Light.h  LightingManager.cpp  LightingManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  main.cpp
